testsuite/tests/parser/should_fail/T18251d.stderr

T18251d.hs:6:1: error:
    Parse error in pattern: f @a
    Type applications in patterns are currently only supported on data constructors.
